# agentic_hackathon

./: .gitignore  ACCEPTED-LIST.csv  README.md  app.py  backend_api.py  concert-arena.json  generate_profiles.py  hackathon_profiles.py  index.html  linkedin_cache.json  profiles.json  profiles_hackathon.json  pyproject.toml  trajectory.json
benchmarks/: metrics.py  results.py  runner.py
configs/: agents.yaml
simulation/: agent.py  model.py  run.py  tools.py  visualization.py  visualize.py
src/: index.css
src/ui/: SafetyEstimator.tsx  ScenarioManager.tsx  SimCanvas.tsx  VenueEditor.tsx
src/utils/: spatialHash.ts
ui/: README.md  package-lock.json  package.json
ui/src/: App.tsx
ui/src/models/: types.ts
ui/src/sim/: engine.ts
ui/src/ui/: MetricsPanel.tsx  SimControls.tsx
ui/src/utils/: astar.ts  backend.ts  export.ts  math.ts
