[tool.poetry]
name = "agentic-hackathon"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
mesa = ">=3.1"
mesa-llm = { git = "https://github.com/projectmesa/mesa-llm.git" }
anthropic = "*"
python-dotenv = "*"
pyyaml = "*"
openai = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
