[tool.poetry]
name = "agentic-hackathon"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
mesa = ">=3.1"
mesa-llm = { git = "https://github.com/projectmesa/mesa-llm.git" }
anthropic = "*"
python-dotenv = "*"
pyyaml = "*"
openai = "*"
streamlit = ">=1.35"
plotly = ">=5.22"
fastapi = ">=0.116"
uvicorn = ">=0.35"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
